change title search page

--- a/webapp/templates/analysis/search.html
+++ b/webapp/templates/analysis/search.html
@@ -20,7 +20,7 @@
         </div>
     </section>
     <section class="section">
-        <h2 class="title is-4 has-text-centered"> Recent searchs</h2>
+        <h2 class="title is-4 has-text-centered"> Most searched </h2>
         <div class="container">
             <div class="columns is-multiline">
                 {% for search in searchs %}
