add github repo

--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -53,7 +53,7 @@
                 <strong>Hack Hate</strong> - by Team Baguette
             </p>
             <p>
-                <a class="button is-info">
+                <a class="button is-info" href="https://github.com/remybd/junctionHate" target="_blank">
                       <span class="icon">
                         <i class="fa fa-github"></i>
                       </span>
